--- a/scripts/installs/Brewfile
+++ b/scripts/installs/Brewfile
@@ -18,95 +18,87 @@ cask_args appdir: '~/Applications', require_sha: true
 tap 'homebrew/bundle'
 tap 'homebrew/core'
 tap 'homebrew/services'
-tap 'blacktop/tap'
-tap 'browsh-org/homebrew-browsh'
-tap 'espanso/espanso'
-tap 'jesseduffield/lazygit'
-tap 'koekeishiya/formulae'
-tap 'kdash-rs/kdash'
+#tap 'kdash-rs/kdash'             # kdash for kubernetes management
+tap "shivammathur/php"           # to have access to old versions of php
 
 #############################################################
 # Command Line                                              #
 #############################################################
 
 # CLI Essentials
-brew 'git'          # Version controll
-brew 'neovim'       # Text editor
-brew 'ranger'       # Directory browser
+brew 'git'          # Version control
+#brew 'neovim'       # Text editor
+#brew 'ranger'       # Directory browser
 brew 'tmux'         # Term multiplexer
+brew 'vim'          # Text editor
 
 # CLI Basics
 brew 'aria2'        # Resuming download util (better wget)
 brew 'bat'          # Output highlighting (better cat)
+brew 'brename'      # Bulk file renaming
 brew 'broot'        # Interactive directory navigation
+brew 'croc'         # Secure file transfer
 brew 'ctags'        # Indexing of file info + headers
-brew 'diff-so-fancy'# Readable file compares (better diff)
+brew "cyme"         # list USB devices
+brew 'git-delta'    # Readable file compares (better diff, better diff-so-fancy), binary is 'delta'
 brew 'duf'          # Get info on mounted disks (better df)
+#brew 'duti'         # Set default apps for file types (to setup later)
 brew 'entr'         # Run command whenever file changes
-brew 'exa'          # Listing files with info (better ls)
 brew 'exiftool'     # Read, write and modify exif data
+brew 'eza'          # Listing files with info (better ls, replaces exa which is deprecated)
+brew 'fd'           # Alternative to find
+brew 'fx'           # Terminal JSON viewer
 brew 'fzf'          # Fuzzy file finder and filtering
 brew 'hyperfine'    # Benchmarking for arbitrary commands
-brew 'jdupes'       # Duplicate file finder
+#brew 'jdupes'       # Duplicate file finder
 brew 'just'         # Powerful command runner (better make)
 brew 'jq'           # JSON parser, output and query files
-brew 'most'         # Multi-window scroll pager (better less)
-brew 'procs'        # Advanced process viewer (better ps)
+brew 'miller'       # CSV/TSV/JSON processor
+#brew 'procs'        # Advanced process viewer (better ps)
 brew 'ripgrep'      # Searching within files (better grep)
 brew 'rsync'        # Fast incremental file transfer
 brew 'sd'           # RegEx find and replace (better sed)
+brew 'spaceship'    # Customization for ZSH prompt
 brew 'thefuck'      # Auto-correct miss-typed commands
-brew 'tldr'         # Community-maintained docs (better man)
+brew 'tlrc'         # Community-maintained docs (better man, replaces tldr which is deprecated)
 brew 'tokei'        # Count lines of code (better cloc)
 brew 'tree'         # Directory listings as tree structure
-brew 'trash-cli'    # Record and restore removed files
-brew 'watch'        # Run commands periorically
-brew 'xsel'         # Copy paste access to the X clipboard
+brew 'uni'          # Unicode utils and info
+brew 'watch'        # Run commands periodically
+brew 'xan'          # The CSV magician
+#brew 'xsel'         # Copy paste access to the X clipboard
 brew 'zoxide'       # Auto-learning navigation (better cd)
 
 # CLI Monitoring and Performance Apps
-brew 'bmon'         # Bandwidth utilization monitor 
-brew 'ctop'         # Container metrics and monitoring
-brew 'dog'          # DNS lookup client (better dig)
-brew 'bpytop'       # Resource monitoring (like htop)
+#brew 'ctop'         # Container metrics and monitoring (not updated for 3 years)
+brew 'doggo'        # DNS lookup client (better dig)
+brew 'btop'         # Resource monitoring (better htop)
 brew 'dua-cli'      # Disk usage analyzer and monitor (better du)
-brew 'glances'      # Resource monitor + web and API
 brew 'goaccess'     # Web log analyzer and viewer
 brew 'gping'        # Interactive ping tool, with graph
-brew 'speedtest-cli'# Command line speed test utility
+brew 'htop'         # Resource monitoring (better top)
 
 # CLI Productivity Apps
-brew 'aspell'       # Spell check
-brew 'browsh'       # Web browser, in terminal
-brew 'buku'         # Bookmark manager
-brew 'cmus'         # Music player
-brew 'cointop'      # Crypto prices and portfolio
-brew 'ddgr'         # Web search, via DuckDuckGo
-brew 'khal'         # Calendar client
-brew 'mutt'         # Email client
-brew 'newsboat'     # RSS / ATOM reader
-brew 'pass'         # Password store
+brew 'aspell'       # Spell checker
 brew 'rclone'       # Manage cloud storage
-brew 'task'         # Todo + task management
 
 # CLI Development Suits
 brew 'httpie'       # HTTP / API testing testing client
-brew 'lazydocker'   # Full Docker management app
-brew 'lazygit'      # Full Git management app
-brew 'kdash'        # Kubernetes management
+#brew 'lazydocker'   # Full Docker management app
+#brew 'lazygit'      # Full Git management app
+#brew 'kdash'        # Kubernetes management
 
-# CLI External Sercvices
+# CLI External Services
 cask 'ngrok'        # Reverse proxy for sharing localhost
-brew 'tmate'        # Share a terminal session via internet
-brew 'asciinema'    # Recording + sharing terminal sessions
-brew 'navi'         # Browse, search, read cheat sheets
+#brew 'asciinema'    # Recording + sharing terminal sessions
+#brew 'navi'         # Browse, search, read cheat sheets
 
 # CLI Fun
 brew 'cowsay'       # Have an ASCII cow say your message
+brew 'fastfetch'    # Show system data and distro info (replaces neofetch which is deprecated)
 brew 'figlet'       # Output text as big ASCII art text
+brew 'fortune'      # Random quotes and sayings
 brew 'lolcat'       # Make console output rainbow colored
-brew 'neofetch'     # Show system data and ditstro info
-brew 'pipes-sh'     # Cool terminal pipe screen saver
 brew 'pv'           # Pipe viewer, with animation options
 
 #############################################################
@@ -114,94 +106,84 @@ brew 'pv'           # Pipe viewer, with animation options
 #############################################################
 
 # Development Apps
-cask 'android-studio' # IDE for Android development
-cask 'boop'           # Text transformation tool
-brew 'gradle'         # Build automation for Java
+#brew 'gradle'         # Build automation for Java
 cask 'iterm2'         # Better terminal emulator
-cask 'postman'        # HTTP API testing app
-cask 'sourcetree'     # Git visual client
+cask 'phpstorm'       # PHP IDE
 cask 'visual-studio-code' # Code editor
 
-# Development Langs, Compilers, Package Managers and SDKs
-brew 'gcc'            # GNU C++ compilers
-brew 'go'             # Compiler for Go Lang
-brew 'lua'            # Lua interpreter
-brew 'luarocks'       # Package manager for Lua
-brew 'node'           # Node.js
+# Development Languages, Compilers, Package Managers and SDKs
+#brew 'node'           # Node.js
 brew 'nvm'            # Switching node versions
 brew 'openjdk'        # Java development kit
+brew 'shivammathur/php/php@7.4' # PHP 7.4
+brew 'php@8.1'        # PHP 8.1
+brew 'php@8.2'        # PHP 8.2
+brew 'php@8.3'        # PHP 8.3
 brew 'python'         # Python interpreter
 brew 'rust'           # Rust language
-cask 'android-sdk'    # Android software dev kit
+brew 'shellcheck'     # Shell script analysis tool
+#cask 'android-sdk'    # Android software dev kit
 
 # DevOps
 brew 'ansible'        # Automation
-brew 'docker'         # Containers
+brew 'awscli'         # AWS command line tools
+brew 'caddy'          # Web server
+brew 'direnv'         # Environment variable manager
+#brew 'docker'         # Containers
+brew 'redis'          # In-memory data structure store
+brew 'meilisearch'    # Search engine
+brew 'python-packaging' # Python packaging tools (useful for ansible)
+brew 'tfenv'          # Terraform version manager
 
 # Development Utils
+cask 'dbngin'         # Database server management
+cask 'fork'           # Git GUI client
 brew 'gh'             # Interact with GitHub PRs, issues, repos
-brew 'git-extras'     # Extra git commands for common tasks
-brew 'scrcpy'         # Display and control Android devices
-brew 'terminal-notifier' # Trigger Mac notifications from terminal
-brew 'tig'            # Text-mode interface for git
-brew 'ttygif'         # Generate GIF from terminal commands + output
-brew 'watchman'       # Watch for changes and reload dev server
+brew 'git-lfs'        # Git large file storage
+cask 'rapidapi'       # API client
+#brew 'scrcpy'         # Display and control Android devices
+cask 'tableplus'      # Database client
+#brew 'terminal-notifier' # Trigger Mac notifications from terminal (deprecated)
+#brew 'watchman'       # Watch for changes and reload dev server
 
 # Network and Security Testing
-brew 'bettercap'      # Network, scanning and monitoring
-brew 'nmap'           # Port scanning
-brew 'wrk'            # HTTP benchmarking
-cask 'burp-suite'     # Web security testing
-cask 'owasp-zap'      # Web app security scanner
-cask 'wireshark'      # Network analyzer + packet capture
+#brew 'bettercap'      # Network, scanning and monitoring
+#brew 'nmap'           # Port scanning
+#brew 'wrk'            # HTTP benchmarking
+#cask 'burp-suite'     # Web security testing
+#cask 'owasp-zap'      # Web app security scanner
+#cask 'wireshark'      # Network analyzer + packet capture
 
 # Security Utilities and Data Encryption
 brew 'bcrypt'         # Encryption utility, using blowfish
 brew 'borgbackup'     # Encrypted, deduplicated backups
-brew 'clamav'         # Open source virus scanning suite
-brew 'dnscrypt-proxy' # Proxy for using encrypted DNS
-cask 'gpg-suite'      # PGP encryption for emails and files
-brew 'git-crypt'      # Transparent encryption for git repos
-brew 'lynis'          # Scan system for common security issues
 brew 'openssl'        # Cryptography and SSL/TLS Toolkit
-brew 'rkhunter'       # Search / detect potential root kits
-cask 'veracrypt'      # File and volume encryption
+
+# Media
+brew 'exiftool'       # Read and write image metadata
+brew 'ffmpeg'         # Audio and video processing toolkit
+brew 'imagemagick'    # Image manipulation tools
+brew 'jpegoptim'      # JPG image optimizing utility
+brew 'pngquant'       # PNG image optimizing utility
+brew 'webp'           # WebP image tools
+brew 'yt-dlp'         # Feature-rich command-line audio/video downloader
 
 #############################################################
 # Desktop Applications                                      #
 #############################################################
 
-# Creativity
-cask 'audacity'     # Audio editor / recorder
-cask 'gimp'         # Photo editor
-brew 'handbrake'    # Video transcoder
-cask 'inkscape'     # Vector editor
-cask 'obs'          # Screencasting / recording
-cask 'shotcut'      # Video editor
-
 # Media
-cask 'calibre'      # E-Book reader
-cask 'spotify', args: { require_sha: false } # Propietary music streaming
-cask 'transmission' # Torrent client
-cask 'vlc'          # Media player
+cask 'plexamp'      # Music client for Plex servers
+cask 'iina'         # Modern VLC
 brew 'pandoc'       # Universal file converter
-brew 'youtube-dl'   # YouTube video downloader
-
-# Personal Applications
-cask '1password'      # Password manager (proprietary)
-cask 'tresorit'       # Encrypted file backup (proprietary)
-cask 'standard-notes' # Encrypted synced notes
-cask 'signal'         # Link to encrypted mobile messenger
-cask 'ledger-live'    # Crypto hardware wallet manager
-cask 'mountain-duck'  # Mount remote storage locations
-cask 'protonmail-bridge' # Decrypt ProtonMail emails
-cask 'protonvpn'      # Client app for ProtonVPN
-cask 'vorta'          # GUI for BorgBackup
 
 # Browsers
 cask 'firefox'
-cask 'chromium'
-cask 'orion'
+cask 'vivaldi'
+cask 'zen'
+
+# Communication Apps
+cask 'slack'        # Team communication
 
 #############################################################
 # MacOS-Specific Stuff                                      #
@@ -209,45 +191,41 @@ cask 'orion'
 
 # Fonts
 tap 'homebrew/cask-fonts'
-cask 'font-fira-code'
-cask 'font-hack'
-cask 'font-inconsolata'
-cask 'font-meslo-lg-nerd-font'
-
-# Mac OS Quick-Look Plugins
-cask 'qlcolorcode'    # QL for code with highlighting
-cask 'qlimagesize'    # QL for size info for images
-cask 'qlmarkdown'     # QL for markdown files
-cask 'qlprettypatch'  # QL for patch / diff files
-cask 'qlstephen'      # QL for dev text files
-cask 'qlvideo'        # QL for video formats
-cask 'quicklook-csv'  # QL for tables in CSV format
-cask 'quicklook-json', args: { require_sha: false } # QL for JSON, with trees
-cask 'quicklookapk',   args: { require_sha: false } # QL for Android APKs
-cask 'webpquicklook',  args: { require_sha: false } # QL for WebP image files
+cask 'font-fira-code-nerd-font'
+cask 'font-hack-nerd-font'
+cask 'font-maple-mono-nf'
 
 # Mac OS Mods and Imrovments
-cask 'alt-tab'        # Much better alt-tab window switcher
-cask 'anybar'         # Custom programmatic menubar icons
-cask 'copyq'          # Clipboard manager (cross platform)
-cask 'espanso'        # Live text expander (cross-platform)
+cask 'bartender'      # Manage menubar items
+#cask 'espanso'        # Live text expander (cross-platform)
 cask 'finicky'        # Website-specific default browser
-cask 'hiddenbar'      # Hide / show annoying menubar icons
-brew 'iproute2mac'    # MacOS port of netstat and ifconfig
-brew 'lporg'          # Backup and restore launchpad layout
-brew 'm-cli'          # All in one MacOS management CLI app
-cask 'mjolnir'        # Util for loading Lua automations
-cask 'openinterminal' # Finder button, opens directory in terminal
-cask 'raycast', args: { require_sha: false }  # Spotlight alternative
-cask 'santa'          # Binary authorization for security
+#cask 'hiddenbar'      # Hide / show annoying menubar icons
+#brew 'iproute2mac'    # MacOS port of netstat and ifconfig
+brew 'istat-menus'    # System monitoring in menubar
+brew 'itsycal'        # Menubar calendar
+cask 'raycast'        # Launcher and productivity tool
 cask 'shottr'         # Better screenshot utility
-brew 'skhd'           # Hotkey daemon for macOS
-cask 'stats'          # System resource usage in menubar
-brew 'yabai'          # Tiling window manager
+
+# Productivity
+mas "Bear", id: 1091189122                  # Markdown note taking app
+mas "Dropover", id: 1355679052              # Drag and drop file sharing
+cask 'lookaway'                             # Reminds you to look away from screen
+mas "MindNode - Classic", id: 1289197285    # Mind mapping app
+mas "Numbers", id: 409203825                # Apple spreadsheet app
+cask 'obsidian'                             # Markdown note taking app
+mas "Reeder Classic.", id: 1529448980       # RSS reader
+mas "Soonie", id: 6468766154                # Alerts next meeting
+mas "TestFlight", id: 899247664             # Apple app testing platform
+mas "Things3", id: 904280696                # Task management app
 
 # Mac OS Utility Apps
+cask '1password'      # Password manager (proprietary)
+cask '1password-cli'  # Password manager (proprietary)
+mas "Amphetamine", id: 937984704 # Keep Mac awake
 cask 'coteditor'      # Just a simple plain-text editor
-cask 'little-snitch'  # Firewall app viewing / blocking traffic
-cask 'keka'           # File archiver and extractor
+#cask 'little-snitch'  # Firewall app viewing / blocking traffic
+cask 'keka'           # File archiver and extractor (includes a cli https://github.com/aonez/Keka/wiki/Terminal-support)
+cask 'mas'            # Mac App Store CLI
+cask 'transmit'       # FTP/SFTP/S3/more client
 
 # EOF
